# CrewAI

./: .gitignore  LICENSE  README.md  pyproject.toml
.cursor/rules/: coddingpaternpreferences.mdc  workflow-preferences.mdc
src/reporting_flow/: config.py  llm_config.py  main.py
src/reporting_flow/crews/reporting_content_writer/: reporting_content_writer_crew.py
src/reporting_flow/crews/reporting_content_writer/config/: agents.yaml  tasks.yaml
src/reporting_flow/crews/reporting_research/: reporting_research_crew.py
src/reporting_flow/crews/reporting_research/config/: agents.yaml  tasks.yaml
