[tool.poetry]
name = "reporting_flow"
version = "0.1.0"
description = "reporting-flow using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
crewai = {extras = ["tools"], version = "^0.105.0"}
langtrace-python-sdk = ">=3.3.2"
langchain = "^0.3.20"
databricks-sdk = "^0.46.0"

[tool.poetry.scripts]
kickoff = "reporting_flow.main:kickoff"
plot = "reporting_flow.main:plot"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
